v1.99.5
----------------------------------------------------------------------------------------------------
 * Enhanced checks for wildcard domain names in certificate coverage.
 * ACME authorizations and certificate requests only done for minimal set of domain names,
   e.g. domain covered by a wildcard are left out. LE CA requires this.
 * First successful wildcard certificate signup in test suite
 * Old and long deprecated configuration directives "ManagedDomain(s)" removed.
 * Challenge type 'tls-sni-01' removed as it has been disabled by Let's Encrypt.
 * When the ACME server threw its challenges at us, we selected the first among the 
   configured/supported ones and ran that. When it failed, the whole authorization
   failed until the retry kicked in. Now, on a failed challenge startup, we look for the
   next possible challenge type and try that.
   This allows for challenge types that are configured and maybe supported in general,
   but do not work for all domains. E.g. when we add DNS challenge support, that type
   may only work for a subset of the domains. 
   Instead of putting the burden on the user to configured the MDomains individually 
   correct, the DNS challenge setup can just return APR_ENOTIMPL and another challenge 
   type is used (if available).
 * configure updated to better work with non-standard curl library locations.

v1.99.4
----------------------------------------------------------------------------------------------------
 * tls-alpn-01 challenge method, when available, is now preferred.
 * configure now checks the libcurl version to be at least 7.50, as does the Apache configure.

v1.99.3
----------------------------------------------------------------------------------------------------
 * OpenSSL initialization disabled in the module. Leaving that to mod_ssl/APR.
 * mod_ssl trunk patch is now empty, changes have been committed into Apache trunk.