@@ -623,49 +623,3 @@ apr_status_t md_acme_authz_teardown(struct md_store_t *store,
     return APR_SUCCESS;
 }
 
-/**************************************************************************************************/
-/* Delete an existing authz resource */
-
-typedef struct {
-    apr_pool_t *p;
-    md_acme_authz_t *authz;
-} del_ctx;
-
-static apr_status_t on_init_authz_del(md_acme_req_t *req, void *baton)
-{
-    md_json_t *jpayload;
-
-    (void)baton;
-    jpayload = md_json_create(req->p);
-    md_json_sets("deactivated", jpayload, MD_KEY_STATUS, NULL);
-    
-    return md_acme_req_body_init(req, jpayload);
-} 
-
-static apr_status_t authz_del(md_acme_t *acme, apr_pool_t *p, const apr_table_t *hdrs, 
-                              md_json_t *body, void *baton)
-{
-    authz_req_ctx *ctx = baton;
-    
-    (void)p;
-    (void)body;
-    (void)hdrs;
-    md_log_perror(MD_LOG_MARK, MD_LOG_INFO, 0, ctx->p, "deleted authz %s", ctx->authz->url);
-    acme->acct = NULL;
-    return APR_SUCCESS;
-}
-
-apr_status_t md_acme_authz_del(md_acme_authz_t *authz, md_acme_t *acme, 
-                               md_store_t *store, apr_pool_t *p)
-{
-    authz_req_ctx ctx;
-    
-    (void)store;
-    ctx.p = p;
-    ctx.authz = authz;
-    
-    md_log_perror(MD_LOG_MARK, MD_LOG_DEBUG, 0, p, "delete authz for %s from %s", 
-                  authz->domain, authz->url);
-    return md_acme_POST(acme, authz->url, on_init_authz_del, authz_del, NULL, &ctx);
-}
-
