@@ -1,3 +1,9 @@
+ * When migrating from ACMEv1 to ACMEv2 on the same host, the account private key of an
+   existing account is reused on registration. Let's Encrypt internally treats this as
+   the same account, although it is exposed using different urls. This helps keeping
+   the waste of large prime numbers at a manageable level and allows for more useful
+   statistics from ACME CAs.
+
 v1.99.5
 ----------------------------------------------------------------------------------------------------
  * Enhanced checks for wildcard domain names in certificate coverage.
